{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 12,
  "lineage": "cb678247-0ae2-a93b-1989-507152fdbcae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Demo_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac73f33a1888c64a",
            "arn": "arn:aws:ec2:us-west-2:370612984446:instance/i-07b86fece1747a99b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b86fece1747a99b",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "key22",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b1c0d3cd1faea925",
            "private_dns": "ip-172-0-0-38.us-west-2.compute.internal",
            "private_ip": "172.0.0.38",
            "public_dns": "ec2-54-212-239-210.us-west-2.compute.amazonaws.com",
            "public_ip": "54.212.239.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea1b8a06d32c784a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0afc39d1c4af20121",
            "tags": {
              "Name": "UbuntuServer",
              "Type": "Docker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ffdb61173778dcd1"
            ]
          },
          "dependencies": [
            "aws_security_group.demo_sg",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redhat_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e78c5619c5e68b4",
            "arn": "arn:aws:ec2:us-west-2:370612984446:instance/i-0fa505548ed8f0b3b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa505548ed8f0b3b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key22",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00a9e782fdedf71cc",
            "private_dns": "ip-172-0-0-73.us-west-2.compute.internal",
            "private_ip": "172.0.0.73",
            "public_dns": "ec2-35-164-146-177.us-west-2.compute.amazonaws.com",
            "public_ip": "35.164.146.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08334cf4e7b29204e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0afc39d1c4af20121",
            "tags": {
              "Name": "Redhat_Server_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ffdb61173778dcd1"
            ]
          },
          "dependencies": [
            "aws_security_group.demo_sg",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e78c5619c5e68b4",
            "arn": "arn:aws:ec2:us-west-2:370612984446:instance/i-03be51e5323824ca3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03be51e5323824ca3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key22",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07d36333928107c50",
            "private_dns": "ip-172-0-0-187.us-west-2.compute.internal",
            "private_ip": "172.0.0.187",
            "public_dns": "ec2-34-210-13-240.us-west-2.compute.amazonaws.com",
            "public_ip": "34.210.13.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc4738af2ffeec14",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e28ba81b2270d69f",
            "tags": {
              "Name": "Redhat_Server_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ffdb61173778dcd1"
            ]
          },
          "dependencies": [
            "aws_security_group.demo_sg",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:370612984446:internet-gateway/igw-091a24f577e6960fc",
            "id": "igw-091a24f577e6960fc",
            "owner_id": "370612984446",
            "tags": {
              "Name": "demo_vpc_igw"
            },
            "vpc_id": "vpc-0bb6c940b67b6e121"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0729432a47372c7ce",
            "owner_id": "370612984446",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091a24f577e6960fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_vpc_public_rt"
            },
            "vpc_id": "vpc-0bb6c940b67b6e121"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d491b5e9cb32336b",
            "route_table_id": "rtb-0729432a47372c7ce",
            "subnet_id": "subnet-0afc39d1c4af20121"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_route_table.public_rt",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06891848989b95543",
            "route_table_id": "rtb-0729432a47372c7ce",
            "subnet_id": "subnet-0e28ba81b2270d69f"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_route_table.public_rt",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:370612984446:security-group/sg-0ffdb61173778dcd1",
            "description": "Allow All Ports All Protocals",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffdb61173778dcd1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow_All_Ports",
            "name_prefix": "",
            "owner_id": "370612984446",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0bb6c940b67b6e121"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:370612984446:subnet/subnet-0afc39d1c4af20121",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.0.0.0/25",
            "id": "subnet-0afc39d1c4af20121",
            "map_public_ip_on_launch": true,
            "owner_id": "370612984446",
            "tags": {
              "Name": "demo_vpc_subnet_1"
            },
            "vpc_id": "vpc-0bb6c940b67b6e121"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:370612984446:subnet/subnet-0e28ba81b2270d69f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.0.0.128/25",
            "id": "subnet-0e28ba81b2270d69f",
            "map_public_ip_on_launch": true,
            "owner_id": "370612984446",
            "tags": {
              "Name": "demo_vpc_subnet_2"
            },
            "vpc_id": "vpc-0bb6c940b67b6e121"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:370612984446:vpc/vpc-0bb6c940b67b6e121",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/24",
            "default_network_acl_id": "acl-075807008cf3c2cc8",
            "default_route_table_id": "rtb-015a69adf4d24a52e",
            "default_security_group_id": "sg-07b711fdebc84e728",
            "dhcp_options_id": "dopt-b3054ccb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bb6c940b67b6e121",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-015a69adf4d24a52e",
            "owner_id": "370612984446",
            "tags": {
              "Name": "demo_vpc"
            }
          }
        }
      ]
    }
  ]
}